--- a/views/client_edit.html.twig
+++ b/views/client_edit.html.twig
@@ -11,9 +11,10 @@
                 <h1>Hair Salon<h1>
             </div><br>
 
-            <h4>Edit record for {{ stylist.getName }}</h4><br>
+            <h4>Edit record for {{ stylist.getName }}'s client: {{ client.getName }}</h4>
+            <br>
 
-            <form action='/stylists/{{ stylist.getId }}/submit_edit' method='post'>
+            <form action='/clients/{{ client.getId }}/submit_edit' method='post'>
                 <div class='form-group'>
                     <input name='_method' value='patch' hidden>
                     <input required type='text' name='name' class='form-control'
@@ -21,7 +22,7 @@
                 </div>
 
                 <button type='submit' class='btn btn-primary'>Submit</button>
-            </form><br><br>
+            </form>
 
             <h4><a href='/'>Home</a></h4><br><br><br><br>
 
